[package]
authors = ["Victor Suarez <svmnotn@gmail.com>"]
name = "yaskbf"
edition = "2021"
version = "0.1.0"
build = "build.rs"

[dependencies]
embassy-executor = { version = "0.5", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "log",
    "integrated-timers",
] }
embassy-nrf = { version = "0.1", features = [
    "log",
    "nrf52840",
    "gpiote",
    "time",
    "nfc-pins-as-gpio",
    "time-driver-rtc1",
] }
embassy-time = { version = "0.3", features = ["log"] }
embassy-usb = { version = "0.1", features = ["log"] }
embassy-usb-logger = { version = "0.1" }
embassy-sync = { version = "0.5", features = ["log"] }
nrf-softdevice = { version = "0.1", features = [
    "log",
    "nrf52840",
    "s140",
    "critical-section-impl",
    "ble-rssi",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-peripheral",
    "ble-central",
    "ble-sec",
    "evt-max-size-512",
] }
embassy-boot-nrf = { version = "0.2", features = ["softdevice"]}
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = "0.3"
log = "0.4"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
