[package]
authors = ["Victor Suarez <svmnotn@gmail.com>"]
name = "yaskbf"
edition = "2021"
version = "0.1.0"
build = "build.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = {version = "0.3", features = ["print-defmt"]}
defmt = "0.3.6"
defmt-rtt = "0.4.0"
static_cell = "2"
once_cell = { version = "1.19.0", features = ["atomic-polyfill"], default-features = false }

sharp-memory-display = { version = "0.3", default-features = false, features = ["ls011b7dh03"] }
embedded-graphics-core = "0.3"

[dependencies.nrf-softdevice]
version = "*"
git = "https://github.com/embassy-rs/nrf-softdevice"
features = [
    "defmt",
    "nrf52840",
    "s140",
    "critical-section-impl",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-peripheral",
    "ble-central",
    "ble-sec",
]

[dependencies.embassy-executor]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = [
    "nightly",
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
]

[dependencies.embassy-nrf]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = [
    "defmt",
    "nrf52840",
    "gpiote",
    "nfc-pins-as-gpio",
    "time-driver-rtc1",
]

[dependencies.embassy-time]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-usb]
version = "*"
git = "https://github.com/embassy-rs/embassy"
# features = ["defmt"]

# [dependencies.embassy-sync]
# version = "*"
# git = "https://github.com/embassy-rs/embassy"
# features = ["defmt"]

# [dependencies.embassy-boot-nrf]
# version = "*"
# git = "https://github.com/embassy-rs/embassy"
# features = ["softdevice"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
